Upgrade pool code

--- a/package.json
+++ b/package.json
@@ -31,22 +31,22 @@
         "url": "https://github.com/zone117x/node-open-mining-portal.git"
     },
     "dependencies": {
-        "async": "3.2.1",
-        "bignum": "^0.13.1",
-        "bluebird": "^3.7.2",
-        "body-parser": "*",
-        "colors": "*",
-        "compression": "*",
-        "dateformat": "4.5.1",
-        "dot": "*",
-        "express": "*",
-        "extend": "*",
-        "meter-stratum-pool": "0.1.1",
-        "mysql": "*",
+        "stratum-pool": "git://github.com/zone117x/node-stratum-pool.git",
+        "dateformat": "1.0.12",
         "node-json-minify": "*",
+        "redis": "0.12.1",
+        "mysql": "*",
+        "async": "1.5.2",
+        "express": "*",
+        "body-parser": "*",
+        "compression": "*",
+        "dot": "*",
+        "colors": "*",
+        "node-watch": "0.5.9",
+        "request": "2.69.0",
         "nonce": "*",
-        "redis": "3.1.2",
-        "request": "^2.88.0"
+        "bignum": "0.13.1",
+        "extend": "*"
     },
     "engines": {
         "node": ">=0.10"
