--- a/config.json
+++ b/config.json
@@ -15,7 +15,7 @@
         "connectionTimeout": 600,
         "emitInvalidBlockHashes": false,
         "validateWorkerUsername": false,
-        "tcpProxyProtocol": false,
+        "tcpProxyProtocol": true,
         "banning": {
             "enabled": true,
             "time": 600,
@@ -33,7 +33,7 @@
         "enabled": true,
         "host": "0.0.0.0",
         "port": 8088,
-        "stratumHost": "cryppit.com",
+        "stratumHost": "0.0.0.0",
         "stats": {
             "updateInterval": 60,
             "historicalRetention": 43200,
