--- a/config.json
+++ b/config.json
@@ -33,7 +33,7 @@
         "enabled": true,
         "host": "0.0.0.0",
         "port": 8088,
-        "stratumHost": "0.0.0.0",
+        "stratumHost": "meter.nextblu.com",
         "stats": {
             "updateInterval": 60,
             "historicalRetention": 43200,
